Initial support for SBOM generation and CycloneDX
Co-authored-by: Guillaume Smet <guillaume.smet@gmail.com>

Co-authored-by: Rostislav Svoboda <rsvoboda@redhat.com>